(Feat): Reorganize Sidebars + Support Snippets

--- a/docs/appslots/applications/autodl.mdx
+++ b/docs/appslots/applications/autodl.mdx
@@ -27,15 +27,16 @@ You can attach directly to the running irssi screen with:
 ```bash main
 screen -r irssi
 ```
+
 To detach again, press: `control-a, control-d`
 
 ## Service Management
 
 Like all box configured applications, you can manage autodl via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="autodl"/>
+<SystemdTabs service="autodl" />
 
 ## Configuration
 
