--- a/docs/appslots/applications/bazarr.mdx
+++ b/docs/appslots/applications/bazarr.mdx
@@ -22,14 +22,13 @@ This command will configure bazarr for your user.
 
 Once setup, bazarr will be available at the link `https://<hostname.io>/bazarr`
 
-
 ## Service Management
 
 Like all box configured applications, you can manage Bazarr via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="bazarr"/>
+<SystemdTabs service="bazarr" />
 
 ## Configuration
 
@@ -41,22 +40,25 @@ If you've already got Sonarr or Radarr installed, you'll skip the setup wizard. 
 
 You'll still need to setup your subtitles provider. Go to `Settings > Subtitles`. Select a provider, enter your credentials. Scroll down the page to `Subtitle Languages` and add your preferred languages. Click Save. Bazarr should now be ready to go!
 
-
 If you haven't installed Sonarr or Radarr yet, you'll be greeted by a setup wizard. You shouldn't need to edit any details on the `General` page; however, if the `URL Base` field is empty, make sure you enter: `/bazarr/` (note the leading and trailing slashes). Click `Next`.
 
 On the `Subtitles` page, choose a provider and set at least one language. You won't be able to proceed with the wizard until you've set these basics.
 
-### Connect to *darr apps
+### Connect to \*darr apps
+
 If Sonarr or Radarr weren't setup when you installed, you can still manually configure the connection to these apps. To add a media client, go to `Settings > Sonarr` or `Settings > Radarr`.
 
 #### Sonarr
+
 ```plaintext
 IP: <subnet IP>
 Port: <sonarr port>
 Base URL: /sonarr
 API Key: <sonarr API>
 ```
+
 #### Radarr
+
 ```plaintext
 IP: <subnet IP>
 Port: <radarr port>
@@ -68,18 +70,23 @@ API Key: <radarr API>
 Forgot your subnet, API key or port? No worries, here are oneliners you can submit from SSH:
 
 Subnet:
+
 ```bash
 cat ~/.install/subnet.lock
 ```
 
 Sonarr:
+
 ```bash
 cat ~/.config/NzbDrone/config.xml | grep -e \<Api -e \<Port
 ```
+
 Radarr:
+
 ```bash
 cat ~/.config/Radarr/config.xml | grep -e \<Api -e \<Port
 ```
+
 :::
 
 ### More info
