--- a/docs/appslots/applications/deluge.mdx
+++ b/docs/appslots/applications/deluge.mdx
@@ -26,8 +26,8 @@ The GTK thin client uses a secure connection to your slot to display the remote 
 
 In order to use the Thin client, you must have a recent version of Deluge installed locally on your computer. Below are instructions for popular operating systems:
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
 <Tabs
   defaultValue="windows"
@@ -41,33 +41,29 @@ import TabItem from '@theme/TabItem';
   ]}>
   <TabItem value="windows">
  
- 
 
-  Grab the most recent version from [here](https://ftp.osuosl.org/pub/deluge/windows/?C=M;O=D) and save it to a common location (i.e. Downloads). 
+
+Grab the most recent version from [here](https://ftp.osuosl.org/pub/deluge/windows/?C=M;O=D) and save it to a common location (i.e. Downloads).
 Run the installer and follow the prompts.
- 
- 
 
   </TabItem>
   <TabItem value="macos">
-  
 
-  You can grab a pre-2.0 version of deluge [here](https://ftp.osuosl.org/pub/deluge/mac_osx/?C=M;O=D), or install it via `brew` like so
 
-  ```bash
-  # For version 1.x
-  brew install --cask deluge 
-  # For python-based deluge
-  brew install pygobject3 gtk+3 adwaita-icon-theme
-  brew install libtorrent-rasterbar
-  brew link gettext --force
-  pip3 install deluge
-  ```
-  
-  
+You can grab a pre-2.0 version of deluge [here](https://ftp.osuosl.org/pub/deluge/mac_osx/?C=M;O=D), or install it via `brew` like so
+
+```bash
+# For version 1.x
+brew install --cask deluge
+# For python-based deluge
+brew install pygobject3 gtk+3 adwaita-icon-theme
+brew install libtorrent-rasterbar
+brew link gettext --force
+pip3 install deluge
+```
+
   </TabItem>
   <TabItem value="debuntu">
-
 
 Deluge is available from the distribution repositories. Simply open a terminal and issue the command:
 
@@ -76,10 +72,8 @@ sudo apt update
 sudo apt install deluge
 ```
 
-
 </TabItem>
 <TabItem value="opensuse">
-
 
 Deluge is available from the distribution repositories. Simply open a terminal and issue the command:
 
@@ -89,9 +83,7 @@ sudo zypper install deluge
 
 </TabItem>
 
-
 <TabItem value="fedora">
-
 
 Deluge is available from the distribution repositories. Simply open a terminal and issue the command:
 
@@ -131,9 +123,11 @@ Port: <the daemon port of your instance>
 
 :::note
 During the configuration of Deluge on your slot, the setup output both your Daemon and Web ports. If you've forgotten your daemon port, you can find it with the following command:
+
 ```bash
 cat ~/.config/deluge/core.conf | grep daemon_port
 ```
+
 :::
 
 Once you click okay, you'll be taken back to the connection dialog. Your new connection will be listed and if everything is okay, you'll see a green check box next to it. When you click connect, you'll be taken to your client.
@@ -146,16 +140,19 @@ If you are not currently logged in, you will first receive a basic authenticatio
 
 :::note
 This second password authetication layer cannot be fully removed due to restrictions in Deluge. However, you can increase the length of time that the cookie is stored locally by your browser to one year (from one hour):
+
 ```bash
 box stop deluge-web
 sed -i 's/"session_timeout": 3600,/"session_timeout": 31536000,/g' ~/.config/deluge/web.conf
 box start deluge-web
 ```
+
 :::
 
 ### deluge-console
 
 #### Getting Started
+
 You can access the command line version of the deluge console by using the command:
 
 ```bash main
@@ -163,6 +160,7 @@ deluge-console
 ```
 
 #### Connecting to Your Daemon
+
 Once loaded, you'll need to specify your daemon port to connect to:
 
 ```bash main
@@ -170,6 +168,7 @@ connect 127.0.0.1:<daemon port>
 ```
 
 #### Available Commands
+
 Once you have successfully connected to the daemon, you can get started with the following commands:
 
 ```plaintext main
@@ -196,14 +195,13 @@ update-tracker - Update tracker for torrent(s)
 For help on a specific command, use "<command> --help"
 ```
 
-
 ## Service Management
 
 Like all box configured applications, you can manage Deluge via SSH with box with start, stop, restart, enable and disable commands. To restart the deluge daemon, use `deluged`. To restart the web interface use `deluge-web`
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="deluge"/>
+<SystemdTabs service="deluge" />
 
 ## Configuration
 
@@ -218,6 +216,7 @@ Not all plugins have a web-ui component. You will likely need to install and man
 :::
 
 ## Connect to other clients
+
 The following variables can be used as a general guide to help you find information you'll need to know in order to connect other clients to Deluge.
 
 - Host: `127.0.0.1`
