--- a/docs/appslots/applications/emby.mdx
+++ b/docs/appslots/applications/emby.mdx
@@ -8,7 +8,6 @@ Take your home videos, music, and photos with you wherever you go, even offline 
 
 Or sit back and enjoy Emby from the living room. Emby apps are available for Android TV, Amazon Fire TV, Chromecast, Roku, Xbox, Home Theater Computers, and more.
 
-
 ## Initial Setup
 
 First you must connect to your slot via ssh. If you need help connecting to the server, please read the help article [here](../getting-started/how-do-i-connect.md).
@@ -43,9 +42,9 @@ Emby is now connected!
 
 Like all box configured applications, you can manage emby via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="emby"/>
+<SystemdTabs service="emby" />
 
 ## Configuration
 
