--- a/docs/appslots/applications/nzbget.mdx
+++ b/docs/appslots/applications/nzbget.mdx
@@ -26,9 +26,9 @@ After installation, you can access nzbGet at the url: `https://<yourhostname.io>
 
 Like all box configured applications, you can manage nzbGet via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="nzbget"/>
+<SystemdTabs service="nzbget" />
 
 ## Configuration
 
@@ -50,4 +50,3 @@ Password: <your slot password>
 :::tip Tip
 In some applications, such as Sonarr and Radarr, you may need to enable **Advanced Settings** to see the option to change **URL Base**.
 :::
-
