--- a/docs/appslots/applications/sabnzbd.mdx
+++ b/docs/appslots/applications/sabnzbd.mdx
@@ -36,9 +36,9 @@ box upgrade sabnzbd
 
 Like all box configured applications, you can manage SABnzbd via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="sabnzbd"/>
+<SystemdTabs service="sabnzbd" />
 
 ## Configuration
 
@@ -61,4 +61,3 @@ SSL: ON
 :::tip Tip
 In some applications, such as Sonarr and Radarr, you may need to enable **Advanced Settings** to see the option to change **URL Base**.
 :::
-
