--- a/docs/appslots/applications/wireguard.mdx
+++ b/docs/appslots/applications/wireguard.mdx
@@ -37,6 +37,7 @@ AllowedIPs = 0.0.0.0/0
 ## How to Access
 
 ### Client Install
+
 In order to use the Wireguard tunnel, you'll need to install the client on your local computer or mobile phone. In order to get started, please check the [Wireguard site](https://www.wireguard.com/install/) for help on installing Wireguard on the operating system of your choice.
 
 :::note
@@ -47,62 +48,78 @@ If you prefer, and alternate client called [TunSafe](https://tunsafe.com/downloa
 
 Wireguard is available on many platforms. Setting it up for use with your Seedbox.io configuration should be fairly straight-forward, but in case you need a littl help getting your client setup, here are some instructions for popular operating systems.
 
-
 #### Linux / OS X
+
 :::panel
+
 1. Simply copy-paste the configuration file outputted at the end of the server setup into a file in /etc/wireguard.
+
 ```bash
 sudo nano /etc/wireguard/wg0.conf
 sudo chmod 600 /etc/wireguard/wg0.conf
 sudo wg-quick up wg0
 ```
+
 2. Wireguard should now be up and tunnelling all you traffic through Seedbox.io.
 3. [Check your IP Address](https://duckduckgo.com/?q=ip+address&ia=answer). It should now reflect your shared or dedicated IP for your slot.
 
 4. On Linux systems, you can configure a systemd service to automatically run and enable this configuration on each boot:
+
 ```bash
 sudo systemctl enable wg-quick@wg0
 ```
+
 :::
+
 #### Windows
+
 :::panel
+
 1. Copy-paste the contents of the client configuration outputted at the end of configuration into a file onto your local desktop,eg: `Seedbox.io.conf.d`
 
 2. Open TunSafe, click and drag the configuration file you just created to the TunSafe window. TunSafe will automatically import the client configuration and connect. Easy!
 
 3. [Check your IP Address](https://duckduckgo.com/?q=ip+address&ia=answer). It should now reflect your shared or dedicated IP for your slot.
-:::
+   :::
+
 #### Android
+
 :::panel
 Configuration is easiest if you use utilize the QR Encode function.
 
 1. Connect to your server from a computer and issue the commands:
+
 ```bash
 u=$(whoami)
 qrencode -t ansiutf8 < ~/.wireguard/$u.conf
 ```
+
 2. In your client on your phone, add a new tunnel and chose the `QR Code` option. Scan the QR code which was generated in your terminal.
 3. Enable the tunnel by ticking the switch.
 4. [Check your IP Address](https://duckduckgo.com/?q=ip+address&ia=answer).
-:::
+   :::
+
 #### iOS
+
 :::panel
 Configuration is easiest if you use utilize the QR Encode function.
 
 1. Connect to your server from a computer and issue the commands:
+
 ```bash
 u=$(whoami)
 qrencode -t ansiutf8 < ~/.wireguard/$u.conf
 ```
+
 2. In your client on your phone, add a new tunnel and chose the `QR Code` option. Scan the QR code which was generated in your terminal.
 3. Enable the tunnel by ticking the switch.
 4. [Check your IP Address](https://duckduckgo.com/?q=ip+address&ia=answer).
-:::
+   :::
 
 ## Service Management
 
 Like all box configured applications, you can manage Wireguard via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="wireguard"/>
+<SystemdTabs service="wireguard" />
