--- a/docs/pre-sales/payment-methods.mdx
+++ b/docs/pre-sales/payment-methods.mdx
@@ -3,28 +3,29 @@ id: payment-methods
 title: Accepted payment methods
 sidebar_label: Accepted payment methods
 ---
+
 We support a very large range of payment options. We have listed them all below, including the fees for each method.
 
-* PayPal (Fee: None!)
+- PayPal (Fee: None!)
 
-* VISA/MasterCard (Fee: None!)
+- VISA/MasterCard (Fee: None!)
 
-* Bitcoin / LiteCoin / Ethereum (Fee: None!) 
+- Bitcoin / LiteCoin / Ethereum (Fee: None!)
 
-* OKPay (Fee: None!)
+- OKPay (Fee: None!)
 
-* Webmoney (Fee: 5%)
+- Webmoney (Fee: 5%)
 
-* iDeal (Fee: 5%)
+- iDeal (Fee: 5%)
 
-* EPS (Fee: 5%)
+- EPS (Fee: 5%)
 
-* Yandex.Money (Fee: 4%)
+- Yandex.Money (Fee: 4%)
 
-* Neosurf (Fee: 7.5%)
+- Neosurf (Fee: 7.5%)
 
-* Dotpay (Fee: 1%)
+- Dotpay (Fee: 1%)
 
-* POLi (Fee: 1.5%)
+- POLi (Fee: 1.5%)
 
 We are always looking for new ways to make it easier for our customers, don't hessitate to contact us about a new way to receive payments.
