--- a/docs/pre-sales/refund.mdx
+++ b/docs/pre-sales/refund.mdx
@@ -3,6 +3,7 @@ id: refund
 title: Refund policy - 14 day 100% moneyback guarantee
 sidebar_label: Refund policy
 ---
+
 All new clients are welcome to test our services for up to 14 days 100% riskfree, we will issue a full refund in case the service does not live up to the expectations.
 
 NOTE: This does not cover customized dedicated offerings, the plans available on the website are covered but anything outside of that will not be.
@@ -11,6 +12,6 @@ Do note, we would naturally very much like to solve any issues, so please submit
 
 All refund requests must be dealt with by contacting our billing department via our ticket system.
 
-*Refunds for payments done via crypto is currently not supported.
+\*Refunds for payments done via crypto is currently not supported.
 
-**In case of AUP violations, any and all refunds are forfeit.
+\*\*In case of AUP violations, any and all refunds are forfeit.
