--- a/docs/shared-storage/administration/upgrade-seedbox.mdx
+++ b/docs/shared-storage/administration/upgrade-seedbox.mdx
@@ -3,9 +3,10 @@ id: upgrade-seedbox
 title: How to upgrade my seedbox
 sidebar_label: Upgrade seedbox
 ---
+
 It is possible to upgrade our seedboxes on the fly without changing the server or location, follow this guide to go through the upgrade.
 
-First off, login to your clientarea and click on your service:
+First off, [login to your clientarea](https://panel.seedbox.io/clientarea.php?action=services) and click on your service:
 
 ![](http://i.imgur.com/RmoPc8Y.png)
 
@@ -21,8 +22,8 @@ After this, you are forwarded to a payment page, with an invoice generated, the 
 
 A few things to note here;
 
-* You cannot change your location from here, you have to submit a ticket for it to work (Automatic moving is coming)
-* You can only upgrade/downgrade within the same product line, eg premium to a larger/smaller premium seedbox.
-* If you wish to move from MINI to PREMIUM let us know via ticket and we will handle it.
+- You cannot change your location from here, you have to submit a ticket for it to work (Automatic moving is coming)
+- You can only upgrade/downgrade within the same product line, eg premium to a larger/smaller premium seedbox.
+- If you wish to move from MINI to PREMIUM let us know via ticket and we will handle it.
 
 As with every other aspect, we are here to assist if you have any questions!
