--- a/docs/shared-storage/applications/connect-openvpn.mdx
+++ b/docs/shared-storage/applications/connect-openvpn.mdx
@@ -3,6 +3,7 @@ id: connect-openvpn
 title: How to connect via OpenVPN
 sidebar_label: Connect via OpenVPN
 ---
+
 All of our shared services (MINI, Premium and SSD) includes OpenVPN access, this guide will help you through connecting to it on a Windows platform, it is fairly similar on other Operating systems aswell but if you have issues, please contact our support team.
 
 First you need to install OpenVPN GUI by downloading it on this link: https://openvpn.net/index.php/open-source/downloads.html - From there simply open it once downloaded and run through the installer process.
@@ -25,4 +26,6 @@ Do note if you have more than a single VPN configuration saved, it will show the
 
 Another thing to note, our VPN only supports a single connection at the time, so if you are using more than one device you will have issues.
 
-As with anything else, if you are having issues please open a ticket!
+import Ticket from "../snippets/ticket.mdx";
+
+<Ticket />
