--- a/docs/shared-storage/applications/connect-sonarr.mdx
+++ b/docs/shared-storage/applications/connect-sonarr.mdx
@@ -3,6 +3,7 @@ id: connect-sonarr
 title: How to connect Sonarr to your service
 sidebar_label: Connect Sonarr
 ---
+
 If you wish to connect your Sonarr installation to your rtorrent instance for automated downloads, then follow this guide.
 
 :::caution
@@ -19,12 +20,14 @@ Then select client:
 
 From there simply insert the details needed, make sure you change the following aspects:
 
-* HOST
-* Username
-* Password
+- HOST
+- Username
+- Password
 
 Insert everything else precisely as listed in the screenshot to make sure that it works properly.
 
 ![](http://i.imgur.com/wtsiGVZ.png)
 
-If you have any questions, then simply contact our support team.
+import Ticket from "../snippets/ticket.mdx";
+
+<Ticket />
