--- a/docs/shared-storage/applications/kodi.mdx
+++ b/docs/shared-storage/applications/kodi.mdx
@@ -3,6 +3,7 @@ id: kodi
 title: How to stream via Kodi/XBMC
 sidebar_label: Stream via Kodi/XBMC
 ---
+
 With these instructions, you can easily stream the content from your seedbox via Kodi/XBMC.
 
 Steps to set it up:
@@ -14,7 +15,7 @@ Steps to set it up:
 5. Select 'Add network location...' in the bottom
 6. Fill out the fields as follows:
 
-```
+```plaintext
 Protocol: Web server directory (HTTPS)
 Server address: XXX.seedbox.io (XXX is to be replaced with your seedbox username)
 Remote path: files
@@ -27,7 +28,7 @@ Password: <seedbox password>
 
 Now the 'Seedbox files' should appear as a file entry in the video source list. Simply click it, and you will have a complete view of the content of your seedbox.
 
-**NOTES FOR USERS WITH BUFFERING***
+**NOTES FOR USERS WITH BUFFERING**
 
 In some cases you see short periods of buffering, the reason for this is that KODI is not caching any data but simply streaming as it needs to.
 
