--- a/docs/shared-storage/applications/remoteadder.mdx
+++ b/docs/shared-storage/applications/remoteadder.mdx
@@ -3,10 +3,10 @@ id: remoteadder
 title: How to use Remote Torrent Adder (Chrome)
 sidebar_label: Use Remote Torrent Adder (Chrome)
 ---
+
 The fastest and easiest way to add torrents to your seedbox is by using the "Remote Torrent Adder" for Google Chrome, it is really easy and straight forward to setup.
 
-To install it go to this link and add it to Chrome: [CLICK HERE](https://www.google.dk/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwi-sL3TnJ3MAhXBFZoKHVtGDlQQFggaMAA&url=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fremote-torrent-adder%2Foabphaconndgibllomdcjbfdghcmenci&usg=AFQjCNH7fAy886AhJhKQ8WWXtZWhYgJmsA&sig2=KgOJctTu46L73x61bB5EHg&bvm=bv.119745492,d.bGs)
-
+To install it go to this link and add it to Chrome: [Remote Torrent Adder on Chrome Webstore](https://chrome.google.com/webstore/detail/remote-torrent-adder/oabphaconndgibllomdcjbfdghcmenci)
 
 Once the install has completed, you will have a new icon at the top right, click on it and then click options:
 
@@ -27,7 +27,6 @@ Typing 443 port without checking the SSL box, if you do not wish to use SSL, the
 
 ![](http://i.imgur.com/eSzWcwu.png)
 
-
 Once you have done all of this, when you wish to add a torrent, simply right click on the link and click on the "Add to Remote WebUI" like below:
 
 ![](http://i.imgur.com/zIukIgd.png)
@@ -35,3 +34,7 @@ Once you have done all of this, when you wish to add a torrent, simply right cli
 After a few seconds, the torrent should appear in your rutorrent webui..
 
 If there's any errors logged during this, then do please take a screenshot and send it to us.
+
+import Ticket from "../snippets/ticket.mdx";
+
+<Ticket />
