--- a/docs/shared-storage/applications/transdroid.mdx
+++ b/docs/shared-storage/applications/transdroid.mdx
@@ -3,9 +3,10 @@ id: transdroid
 title: How to setup Transdroid/Transdrone
 sidebar_label: Transdroid/Transdrone
 ---
+
 Configure your Transdrone app to the following settigns:
 
-```
+```plaintext
 Server type: rTorrent
 IP or host name: <username>.seedbox.io
 Username: <username>
@@ -16,4 +17,8 @@ Optional settings -> Server OS: Linux
 
 In this case, you will have to use the username provided in the seedbox activation email for the hostname and username..
 
-For the RPC part, simply remove the letters from your username, and keep the numbers: "If you username is msb1234 then insert /RPC/1234 as your SCGI Mount point.."
+For the RPC part, simply remove the letters from your username, and keep the numbers: "If you username is `msb1234` then insert `/RPC/1234` as your SCGI Mount point.."
+
+import Ticket from "../snippets/ticket.mdx";
+
+<Ticket />
