--- a/docs/shared-storage/file-access/bouncer.mdx
+++ b/docs/shared-storage/file-access/bouncer.mdx
@@ -1,20 +1,20 @@
 ---
 id: bouncer
 title: How to use our bouncer servers
-sidebar_label: Use bouncer servers
+sidebar_label: Using bouncer servers
 ---
+
 If you are having issues with slow download speeds via FTP, using one of our bouncer servers will often provide a better experience, we constantly add more bouncer servers to our inventory and add them into our FileZilla configuration..
 
-We recommend using FileZilla, and starting here to get the basics of the program: https://panel.seedbox.io/knowledgebase.php?action=displayarticle&id=29
+We recommend using FileZilla, and starting here to get the basics of the program: [Connect to FTP](/shared-storage/file-access/connect-ftp)
 
-To start using our bouncer services, first login to your client area and click on your service.
+To start using our bouncer services, first [login to your client area](https://panel.seedbox.io/clientarea.php?action=services) and click on your service.
 
 :::caution
 Please note that the screenshot points to the URL of the service, do not click on the URL but instead on the blank space next to the URL - Or click on the "Services" tab right above the service, and then click on the "Active" button.
 :::
 
 ![](http://i.imgur.com/RmoPc8Y.png)
-
 
 Once there, click on the option FileZilla configuration at the left panel:
 
