--- a/docs/shared-storage/troubleshooting/reroute.mdx
+++ b/docs/shared-storage/troubleshooting/reroute.mdx
@@ -3,11 +3,10 @@ id: reroute
 title: How to re-route data (NFOrce)
 sidebar_label: Reroute data (NFOrce)
 ---
-If you are experiencing slow FTP speeds to your home PC.
 
-How to;
+If you are experiencing slow FTP speeds to your home PC, there could be loss somewhere along the line. This guide will show you how to setup a reroute,
 
-Login to your clientarea and click on the "Services" tab at the top bar:
+[Login to your clientarea](https://panel.seedbox.io/clientarea.php?action=services) and click on the "Services" tab at the top bar:
 
 ![](https://i.imgur.com/X3UTnMt.png)
 
@@ -33,3 +32,4 @@ This is only available for our clients that are currently hosted at NFOrce (NL),
 
 We hope that this will bring some options for the clients that are experiencing issues with slow FTP performance.
 
+If this doesn't help, see our guide on [Using FTP Bouncer Servers](/shared-storage/file-access/bouncer)
