--- a/docs/appslots/applications/btsync.mdx
+++ b/docs/appslots/applications/btsync.mdx
@@ -4,7 +4,7 @@ title: Resilio (bt)Sync
 sidebar_label: Resilio (bt)Sync
 ---
 
-Resilio Sync (formerly BitTorrent Sync) is a peer-to-peer file synchronization tool available for Windows, Mac, Linux, Android, iOS, Windows Phone, Amazon Kindle Fire and BSD. It can sync files between devices on a local network, or between remote devices over the Internet via a modified version of the BitTorrent protocol. 
+Resilio Sync (formerly BitTorrent Sync) is a peer-to-peer file synchronization tool available for Windows, Mac, Linux, Android, iOS, Windows Phone, Amazon Kindle Fire and BSD. It can sync files between devices on a local network, or between remote devices over the Internet via a modified version of the BitTorrent protocol.
 
 ## Initial Setup
 
@@ -26,9 +26,9 @@ After Resilio Sync has been configured for your user, the application can be acc
 
 Like all box configured applications, you can manage btsync via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="btsync"/>
+<SystemdTabs service="btsync" />
 
 ## Configuration & Usage
 
