--- a/docs/appslots/applications/jackett.mdx
+++ b/docs/appslots/applications/jackett.mdx
@@ -26,9 +26,9 @@ After installation, you can access the web client at `https://<hostname.io>/jack
 
 Like all box configured applications, you can manage Jackett via SSH with box with start, stop, restart, enable and disable commands.
 
-import SystemdTabs from '../snippets/systemdtabs.mdx';
+import SystemdTabs from "../snippets/systemdtabs.mdx";
 
-<SystemdTabs service="jackett"/>
+<SystemdTabs service="jackett" />
 
 ## Configuration
 
@@ -38,11 +38,12 @@ Since every tracker is different in how they accept connections through their AP
 
 :::caution
 Please do not touch the following settings:
+
 - Admin password (you can change, but do not remove)
 - Base URL
 - Server Port
 - External access (leave enabled)
-:::
+  :::
 
 ## Connect to other clients
 
