--- a/docs/appslots/applications/jellyfin.mdx
+++ b/docs/appslots/applications/jellyfin.mdx
@@ -38,4 +38,6 @@ If you were early-access to the apprange and have been experiencing issues with 
 
 Jellyfin has a general [Troubleshooting guide](https://jellyfin.org/docs/general/administration/troubleshooting.html) which we highly suggest you follow first in case you have any issues.
 
-If all else fails, consider putting in a [ticket](https://panel.seedbox.io/clientarea.php).
+If you recently reinstalled Jellyfin, you may need to clear your cookies and cache for your appbox url to properly access the web interface.
+
+If all else fails, consider putting in a [ticket](https://panel.seedbox.io/submitticket.php?step=2&deptid=2).
