--- a/docs/getting-started/introduction-c.mdx
+++ b/docs/getting-started/introduction-c.mdx
@@ -3,20 +3,20 @@ id: introduction-c
 title: Introduction to your client area
 sidebar_label: Introduction client area
 ---
+
 ## Introduction
 
 When you signup for a seedbox with us, you will also get a login that allows you to login to your client area, in this next little part of text/image, we will try to give an impression of what you can actually do within your client area.
 
-
 ### First login
 
-Below, you can see a sample of what you will see when you login to your client area at panel.seedbox.io 
+Below, you can see a sample of what you will see when you login to your client area at panel.seedbox.io
 
 ![](http://i.imgur.com/e1vLHyY.png)
 
 From this view, you have total control over most of your options, you can directly learn more about your service, you can see your custom quotes, invoices, and a list of your recent tickets.
 
-It is also from this page that you submit a new ticket in case you have any issues, we do however appreciate if you read through our knowledge base before contacting support as most of the common issues are listed there.
+It is also from this page that you [submit a new ticket](https://panel.seedbox.io/submitticket.php) in case you have any issues, we do however appreciate if you read through our [knowledge base](https://docs.seedbox.io) before contacting support as most of the common issues are listed there.
 
 Finding the knowledgebase:
 
