--- a/docs/shared-storage/administration/available-space.mdx
+++ b/docs/shared-storage/administration/available-space.mdx
@@ -1,9 +1,10 @@
 ---
 id: available-space
 title: How to see available/used space on seedbox
-sidebar_label: Available space
+sidebar_label: Check available space
 ---
-To check your current disk space usage and available space, simply login to your webui and look at the lower left corner as detailed in the screenshot below: 
+
+To check your current disk space usage and available space, simply login to your webui and look at the lower left corner as detailed in the screenshot below:
 
 ![](http://i.imgur.com/XBXuuEo.png)
 
@@ -11,4 +12,6 @@ In this case the plugin shows that 7% of the total disk space is in use, if you 
 
 So to sum up, the above details show: 7% of the total disk space used, with 277GB available space for new downloads.
 
-If you have any questions relating to this, or the diskspace plugin is not working, simply let our support team know.
+import Ticket from "../snippets/ticket.mdx";
+
+<Ticket />
