--- a/docs/shared-storage/administration/restart-seedbox.mdx
+++ b/docs/shared-storage/administration/restart-seedbox.mdx
@@ -3,6 +3,7 @@ id: restart-seedbox
 title: How to restart the seedbox
 sidebar_label: Restart seedbox
 ---
+
 From time to time, rtorrent might have crashed and you need to manually issue a restart, or you simply wish to start the stats..
 
 A minor walkthrough is here:
@@ -29,5 +30,5 @@ If you are shown with a RED error message in here, do please contact our support
 
 A few things to note here:
 
-* We have an automatic monitoring script that runs every 5 minutes and checks all users, in most cases this solves the crashed rtorrent instances.
-* Restarting will only work if the server is not having some kind of issue, most errors given is due to a general server issue.
+- We have an automatic monitoring script that runs every 5 minutes and checks all users, in most cases this solves the crashed rtorrent instances.
+- Restarting will only work if the server is not having some kind of issue, most errors given is due to a general server issue.
