--- a/docs/shared-storage/file-access/resilio-sync.mdx
+++ b/docs/shared-storage/file-access/resilio-sync.mdx
@@ -1,13 +1,14 @@
 ---
 id: resilio-sync
 title: How to configure Resilio Sync
-sidebar_label: Configure Resilio Sync
+sidebar_label: Using Resilio Sync
 ---
+
 In this guide, we will outline the ways of getting Resilio Sync setup on your seedbox with us, it will however not cover setting it up locally on a NAS or similar.
 
 The first thing you have to do, is to login to your  service's webui for Resilio, this is done via the link as listed below;
 
-https://(username).seedbox.io/resilio - Once you have entered this path, you will be asked for your login credentials that have been provided in the welcome email (It is the same for FTP and WEB access), you will then be greeted with the first page;
+`https://(username).seedbox.io/resilio` - Once you have entered this path, you will be asked for your login credentials that have been provided in the welcome email (It is the same for FTP and WEB access), you will then be greeted with the first page;
 
 ![](https://i.imgur.com/YRC4ck3.png)
 
@@ -25,11 +26,9 @@ First, click on the plus sign and hit "Standard Folder"
 
 ![](https://i.imgur.com/zxULu0e.png)
 
-Then the big issue comes here, as Resilio is not meant to sync the initial folder for downloads, you cannot simply add one 
+Then the big issue comes here, as Resilio is not meant to sync the initial folder for downloads, you cannot simply add one
 
 ![](https://i.imgur.com/AErsijB.png)
-
-
 
 Doing so will result in an error, therefore the only way to do this is via the webui and the builtin file manager:
 
@@ -59,4 +58,6 @@ A few things to note on the screenshot above, first click autotools in the left 
 
 Once all of this has been configured you are good to go!
 
-As always, if you have any questions, then do please hightlight our support team and we will do our best to help you out.
+import Ticket from "../snippets/ticket.mdx";
+
+<Ticket />
